syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";


service DiscountProtoService{
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);

	rpc CreateDiscount(CreateDiscountRequest) returns (CuponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CuponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (CuponModel);
}

message  GetDiscountRequest{ 
	string productName = 1;
}

message CouponModel{

	int32 id = 1;
	string productName = 2;
	string description = 3;
	string amount = 4;
}

message  CreateDiscountRequest{ 
	CuponModel coupon = 1;
}

message  UpdateDiscountRequest{ 
	CuponModel coupon = 1;
}

message  DeleteDiscountRequest{ 
	CuponModel coupon = 1;
}

message  DeleteDiscountResponse{ 
	bool success = 1;
}